--- a/website/site-static/sass/apps/_base.sass
+++ b/website/site-static/sass/apps/_base.sass
@@ -7,5 +7,6 @@
 @import apps/lookup
 @import apps/selectable
 @import apps/alibrary
+@import apps/collector
 // @import apps/scheduler // stand-alone file a.t.m.
 
