--- a/website/site-static/sass/element/_aplayer_inline.sass
+++ b/website/site-static/sass/element/_aplayer_inline.sass
@@ -152,6 +152,10 @@
           &:hover
             text-decoration: underline
 
+        span.title > a
+          color: #555555
+
+
         &.hover
           background-color: #DDFFD9
         &.playing
