--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -12,6 +12,9 @@
 			<li class="play">
 				<a href="{{ item.get_api_url }}#0#replace" title="Play" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Play" /></a>
 			</li>
+			<li class="queue">
+				<a href="{{ item.get_api_url }}#0#queue" title="Play" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Play" /></a>
+			</li>
 		</ul>
 	</div>
 	<div class="list_body_item c2">
@@ -133,9 +136,19 @@
 		<div class="wrapper">
 			<div class="right">
 				<ul class="unstyled">
-					<li class="basket">
+
+                    <!-- legacy version
+                    <li class="basket">
 						<a href="#" title="{% trans "Add to basket" %}" class="collectable"><img src="/static/img/base/spacer.png" width="16" height="16" alt="{% trans "Add to basket" %}" /></a>
-					</li>
+					</li>-->
+
+                    <li>
+                        <a href="#" data-action="collect"><i class="icon icon-plus"></i></a>
+                    </li>
+
+
+
+
 				</ul>
 			</div>
 			<div>
