--- a/website/site-static/sass/_vars.sass
+++ b/website/site-static/sass/_vars.sass
@@ -1,18 +1,20 @@
 /* vars.sass */
 
-$main-color: #0B0
 
-$main-color-b: #00bb00
 
-$main-link-color: #6633CC
+$main-a: #00BB00
+$main-b: #6633CC
+
+$main-color: $main-a
+
+$main-color-b: $main-a
+
+$main-link-color: $main-b
 
 $main-inverse-color: #FFFFFF
 
 $main-content-background-color: #F5F5F5
 
-$main-a: #00BB00
-
-$main-b: #6633CC
 
 
 
