--- a/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
+++ b/website/apps/alibrary/templates/alibrary/element/_tagcloud.html
@@ -27,7 +27,7 @@
 	
 	{% spurl base=request.get_full_path trigger_mquery="tags={{ tag.pk }}" as tag_url %}
 	
-	<a href="{{ tag_url }}" class="tag{{ tag.weight }} {% if tag.hide_level > 0 %}tag-hidden{% endif %} level{{ tag.hide_level }} {% if is_active %} on{% endif %}" style="">{{ tag }}</a>
+	<a href="{{ tag_url }}" class="tag{{ tag.weight }} {% if tag.hide_level > 0 %}tag-hidden{% endif %} level{{ tag.hide_level }} {% if is_active %} on{% endif %}" style="">{{ tag.name }}</a>
 	
 	{% if forloop.last %}
 	<!--
